# cargo-depot

./: Cargo.toml  Makefile.toml  README.md  about.hbs  nfpm.yaml
example/: Cargo.toml  Dockerfile  docker-compose.yaml
example/.cargo/: config.toml
src/: lib.rs  main.rs
