[package]
name = "cargo-depot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
flate2 = "1.0.28"
tar = "0.4.40"
tempfile = "3.9.0"
ureq = "2.9.1"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
cargo_metadata = "0.18.1"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
cargo-platform = "0.1.8"
sha2 = "0.10.8"
toml = "0.8.19"
cargo-util-schemas = "0.4.0"
